adjusting .image3 to fit all screen sizes and to stop overflowing

--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
     font-family: sans-serif;
 }
 
-body{
+/* body{
     overflow: hidden;
-}
+} */
 
 /* Header Styling */
 header{
@@ -85,7 +85,7 @@ nav img{
     /* line-height: 55px; */
 }
 
-#image2, #image3, #bigflower{
+#image2, .image3, #bigflower{
     opacity: 0;
     position: absolute;
 }   
@@ -182,8 +182,6 @@ input{
 
 .form_margin{
     margin-bottom: 25px;
-    /* padding-left: 5px; */
-    /* border: 1px solid black; */
 }
 
 button{
@@ -269,8 +267,6 @@ button:hover{
 footer{
     background-color: #F4F8F9;
     padding: 0 50px;
-    /* display: flex;
-    flex-direction: column; */
 }
 
 .footer_container{
@@ -342,9 +338,6 @@ footer .footer_container .contact p{
 
 /* MEDIA QUERY */
 @media (min-width: 768px) {
-    body{
-        overflow: hidden;
-    }
     .banner{
         height: 533.69px;
     }
@@ -376,11 +369,13 @@ footer .footer_container .contact p{
         right: 85%;
     }
     
-    #image3{
+    .image3{
         opacity: 1;
-        position: relative;
         top: 20%;
-        left: 7%;
+        left: 6%;
+        overflow: hidden;
+        position: relative;
+        /* border: 1px solid black; */
     }
 
     #bigflower{
@@ -422,9 +417,9 @@ footer .footer_container .contact p{
 }
 
 @media (max-width: 430px){
-    body{
-        overflow: hidden;
-    }
+    /* body{
+        overflow-x: hidden;
+    } */
     .invite, .form, .banner, .location, footer{
         padding-bottom: 20px;
         width: 433px;
